crates/kwctl/tests/data/vap/vap-binding-warn.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "kw-scaffold-demo"
spec:
  policyName: "vap-test"
  validationActions: [Warn]
  matchResources:
    namespaceSelector:
      matchLabels:
        kubernetes.io/metadata.name: default
