crates/kwctl/tests/data/vap/vap-with-resource-names.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "vap-test"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["configmaps"]
        resourceNames: ["cluster-config"]
  validations:
    - expression: "object.data.approved == 'true'"
      message: "the ConfigMap must be approved"
