crates/kwctl/tests/data/vap/vap-with-scope.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "vap-test"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["apps"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments", "deployments/scale"]
        scope: "Namespaced"
  validations:
    - expression: "object.spec.replicas > 2"
      message: "should have at least 2 replicas"
